[tool.poetry]
name = "gestordecanal"
version = "0.1.0"
description = "Aplicação para gerir as financas de um canal da Twitch."
authors = ["Lario dos Santos Diniz <lariodiniz@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
